<resources>
    <string name="app_name">ToCarCar</string>
    <string name="title_home">HOME</string>
    <string name="title_cars">MY CARS</string>
    <string name="title_findCars">FIND A CAR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="available_from">Available From</string>
    <string name="available_to">Available To</string>
    <string name="rent_per_day">Rent Per Day</string>
    <string name="post">Post</string>
    <string name="Quote">Life is too short to ride boring cars..</string>
    <string name="no_cars_found">No cars found!</string>
    <string name="company_name">Company</string>
    <string name="model_name">Model</string>
    <string name="licence_plate">Licence Plate</string>
    <string name="year">Year</string>
    <string name="mileage">Mileage (Kms)</string>
    <string name="add_car">Add Car</string>
    <string name="no_postings_found">No postings found</string>
    <string name="book">Book</string>
    <string name="title_myBookings">MY BOOKINGS</string>
</resources>